# safe-robot-steering

./: .gitignore  .gitmodules  README.md  pyproject.toml
env/: env.py
experiments/: analyze_FFN.py  baselines.py  evaluate_one_task_success.py  prob_distr_sanity_check.py
model/: smolvla_policy.py
runs/grpo_smolvla/: events.out.tfevents.1764567819.navlab-ws1.618994.0  events.out.tfevents.1764571554.navlab-ws1.627478.0
train/: env.py  train_smolvla_grpo.py
utils/: find_normalizer_constants.py  find_unnormalizer_constants.py
