[project]
name = "safe_steer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.4,<1.24",   # matches LIBERO's numpy==1.22.4 window
    "num2words",
]

[project.optional-dependencies]
pi = ["transformers @ git+https://github.com/huggingface/transformers.git@fix/lerobot_openpi"]

