[project]
name = "safe-robot-steering"
version = "0.1.0"
description = ""
authors = [
    {name = "TomoCoder123",email = "thomasxdeng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "num2words (>=0.5.14,<0.6.0)",
    "libero (>=0.1.1,<0.2.0)",
    "gym (>=0.26.2,<0.27.0)",
    "transforms3d (>=0.4.2,<0.5.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "imageio (>=2.37.2,<3.0.0)",
    "lerobot @ file:///home/navlab-aa290/jchon/safe-robot-steering/lerobot-local",
]

# having this or not doesn't appear to matter, only running poetry add ./libero-local does. but this is weird
[tool.poetry.dependencies] 
lerobot = {develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
